correction du visiuel au niveau des filtres de la version mobile

--- a/style.css
+++ b/style.css
@@ -545,27 +545,17 @@ nav a {
 }
 
 .filtres-container {
-    width: 100%;
-    border-color: red;
-    border-style: solid;
-    border-width: 2px;
     box-sizing: border-box;
 }
 
-.filtres {
-    width: 100%;
-    border-color:blue;
-    border-style: solid;
-    border-width: 2px;
-}
   
 .invictus {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 85px 85px;
-    margin-left: 30px;
-    margin-right: 30px;
     gap: 30px;
+    width: 95%;
+    margin-left: 25px;
 }
   
 .bord {
@@ -573,6 +563,8 @@ nav a {
     border-radius: 50px;
     border-width: thick;
     padding: 28px;
+    display: flex;
+    justify-content: center;
 }
   
 .infoicon {
